@@ -1,6 +1,9 @@
 package cl.notara.ms_notas_metas.controller;
 
 import cl.notara.ms_notas_metas.controllers.MetaController;
+import cl.notara.ms_notas_metas.exceptions.GlobalExceptionHandler;
+import cl.notara.ms_notas_metas.exceptions.ResourceNotFoundException;
+import cl.notara.ms_notas_metas.models.EstadoMeta;
 import cl.notara.ms_notas_metas.models.Meta;
 import cl.notara.ms_notas_metas.services.MetaService;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -10,18 +13,21 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.context.annotation.Import;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
 
 import java.time.LocalDate;
-import java.util.Arrays;
+import java.util.List;
 
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 @WebMvcTest(MetaController.class)
+@Import(GlobalExceptionHandler.class)
 class MetaControllerTest {
 
     @Autowired
@@ -44,12 +50,15 @@ class MetaControllerTest {
         metaEjemplo.setFechaLimite(LocalDate.of(2025, 12, 31));
         metaEjemplo.setCompletada(false);
         metaEjemplo.setIdUsuario(1L);
+        metaEjemplo.setEstado(EstadoMeta.CONFIRMADA);
     }
 
+    // ─────────────────── GET /metas ───────────────────
+
     @Test
-    @DisplayName("GET /metas - Debería listar todas las metas")
-    void testListarMetas() throws Exception {
-        when(metaService.listar()).thenReturn(Arrays.asList(metaEjemplo));
+    @DisplayName("GET /metas - lista todas las metas")
+    void listar_retornaLista() throws Exception {
+        when(metaService.listar()).thenReturn(List.of(metaEjemplo));
 
         mockMvc.perform(get("/metas"))
                 .andExpect(status().isOk())
@@ -58,14 +67,24 @@ class MetaControllerTest {
                 .andExpect(jsonPath("$[0].nombre").value("Aprender 50 palabras en inglés"))
                 .andExpect(jsonPath("$[0].completada").value(false));
 
-        verify(metaService, times(1)).listar();
+        verify(metaService).listar();
     }
 
     @Test
-    @DisplayName("POST /metas - Debería crear una nueva meta")
-    void testCrearMeta() throws Exception {
-        metaEjemplo.setIdUsuario(1L);
+    @DisplayName("GET /metas - lista vacía retorna 200 con array vacío")
+    void listar_listaVacia() throws Exception {
+        when(metaService.listar()).thenReturn(List.of());
 
+        mockMvc.perform(get("/metas"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.length()").value(0));
+    }
+
+    // ─────────────────── POST /metas ───────────────────
+
+    @Test
+    @DisplayName("POST /metas - crea meta válida y retorna 201")
+    void crear_metaValida_retorna201() throws Exception {
         when(metaService.guardar(any(Meta.class))).thenReturn(metaEjemplo);
 
         mockMvc.perform(post("/metas")
@@ -73,61 +92,172 @@ class MetaControllerTest {
                         .content(objectMapper.writeValueAsString(metaEjemplo)))
                 .andExpect(status().isCreated())
                 .andExpect(jsonPath("$.id").value(1))
-                .andExpect(jsonPath("$.nombre").value("Aprender 50 palabras en inglés"));
+                .andExpect(jsonPath("$.nombre").value("Aprender 50 palabras en inglés"))
+                .andExpect(jsonPath("$.estado").value("CONFIRMADA"));
 
-        verify(metaService, times(1)).guardar(any(Meta.class));
+        verify(metaService, times(2)).guardar(any(Meta.class));
     }
 
     @Test
-    @DisplayName("GET /metas/{id} - Debería obtener una meta existente")
-    void testObtenerMetaExistente() throws Exception {
-        // Given
+    @DisplayName("POST /metas - nombre vacío retorna 400")
+    void crear_nombreVacio_retorna400() throws Exception {
+        Meta invalida = new Meta();
+        invalida.setNombre("");
+        invalida.setIdUsuario(1L);
+
+        mockMvc.perform(post("/metas")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(invalida)))
+                .andExpect(status().isBadRequest());
+
+        verify(metaService, never()).guardar(any());
+    }
+
+    @Test
+    @DisplayName("POST /metas - idUsuario null retorna 400")
+    void crear_idUsuarioNull_retorna400() throws Exception {
+        Meta invalida = new Meta();
+        invalida.setNombre("Meta sin usuario");
+
+        mockMvc.perform(post("/metas")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(invalida)))
+                .andExpect(status().isBadRequest());
+
+        verify(metaService, never()).guardar(any());
+    }
+
+    @Test
+    @DisplayName("POST /metas - servicio lanza RuntimeException → 400")
+    void crear_servicioFalla_retorna400() throws Exception {
+        when(metaService.guardar(any(Meta.class)))
+                .thenThrow(new RuntimeException("Solicitud cancelada: error usuario invalido"));
+
+        mockMvc.perform(post("/metas")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(metaEjemplo)))
+                .andExpect(status().isBadRequest())
+                .andExpect(jsonPath("$.error").value("Solicitud cancelada: error usuario invalido"));
+    }
+
+    // ─────────────────── GET /metas/{id} ───────────────────
+
+    @Test
+    @DisplayName("GET /metas/{id} - retorna meta existente")
+    void obtener_existente_retorna200() throws Exception {
         when(metaService.obtener(1L)).thenReturn(metaEjemplo);
 
-        // When & Then
         mockMvc.perform(get("/metas/1"))
                 .andExpect(status().isOk())
                 .andExpect(jsonPath("$.id").value(1))
                 .andExpect(jsonPath("$.nombre").value("Aprender 50 palabras en inglés"));
 
-        verify(metaService, times(1)).obtener(1L);
+        verify(metaService).obtener(1L);
     }
 
     @Test
-    @DisplayName("GET /metas/{id} - Debería retornar 200 incluso cuando la meta no existe")
-    void testObtenerMetaNoExistente() throws Exception {
-        // Given
-        when(metaService.obtener(99L)).thenReturn(null);
+    @DisplayName("GET /metas/{id} - no existe → 404")
+    void obtener_noExistente_retorna404() throws Exception {
+        when(metaService.obtener(99L))
+                .thenThrow(new ResourceNotFoundException("Meta no encontrada con id: 99"));
 
-        // When & Then - El controller retorna 200 con body vacío
         mockMvc.perform(get("/metas/99"))
-                .andExpect(status().isOk());
+                .andExpect(status().isNotFound())
+                .andExpect(jsonPath("$.error").value("Meta no encontrada con id: 99"));
+    }
 
-        verify(metaService, times(1)).obtener(99L);
+    // ─────────────────── GET /metas/usuario/{id} ───────────────────
+
+    @Test
+    @DisplayName("GET /metas/usuario/{id} - retorna metas del usuario")
+    void obtenerPorUsuario_retornaLista() throws Exception {
+        when(metaService.obtenerPorUsuario(1L)).thenReturn(List.of(metaEjemplo));
+
+        mockMvc.perform(get("/metas/usuario/1"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$[0].idUsuario").value(1));
+
+        verify(metaService).obtenerPorUsuario(1L);
     }
 
     @Test
-    @DisplayName("DELETE /metas/{id} - Debería eliminar una meta")
-    void testEliminarMeta() throws Exception {
+    @DisplayName("GET /metas/usuario/{id} - sin metas → lista vacía")
+    void obtenerPorUsuario_sinMetas_listaVacia() throws Exception {
+        when(metaService.obtenerPorUsuario(99L)).thenReturn(List.of());
+
+        mockMvc.perform(get("/metas/usuario/99"))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.length()").value(0));
+    }
+
+    // ─────────────────── DELETE /metas/{id} ───────────────────
+
+    @Test
+    @DisplayName("DELETE /metas/{id} - elimina y retorna 204")
+    void eliminar_existente_retorna204() throws Exception {
+        doNothing().when(metaService).eliminar(1L);
+
         mockMvc.perform(delete("/metas/1"))
                 .andExpect(status().isNoContent());
 
-        verify(metaService, times(1)).eliminar(1L);
+        verify(metaService).eliminar(1L);
     }
 
     @Test
-    @DisplayName("POST /metas - Debería validar que el nombre no esté vacío")
-    void testCrearMetaConNombreInvalido() throws Exception {
-        Meta metaInvalida = new Meta();
-        metaInvalida.setNombre("");
-        metaInvalida.setDescripcion("Descripción");
-        metaInvalida.setIdUsuario(1L);
+    @DisplayName("DELETE /metas/{id} - no existe → 404")
+    void eliminar_noExistente_retorna404() throws Exception {
+        doThrow(new ResourceNotFoundException("Meta no encontrada con id: 99"))
+                .when(metaService).eliminar(99L);
 
-        mockMvc.perform(post("/metas")
+        mockMvc.perform(delete("/metas/99"))
+                .andExpect(status().isNotFound());
+    }
+
+    // ─────────────────── PUT /metas/{id} ───────────────────
+
+    @Test
+    @DisplayName("PUT /metas/{id} - actualiza y retorna meta")
+    void actualizar_existente_retorna200() throws Exception {
+        Meta actualizada = new Meta();
+        actualizada.setNombre("Meta actualizada");
+        actualizada.setDescripcion("Nueva desc");
+        actualizada.setIdUsuario(1L);
+
+        when(metaService.actualizar(eq(1L), any(Meta.class))).thenReturn(metaEjemplo);
+
+        mockMvc.perform(put("/metas/1")
                         .contentType(MediaType.APPLICATION_JSON)
-                        .content(objectMapper.writeValueAsString(metaInvalida)))
+                        .content(objectMapper.writeValueAsString(actualizada)))
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id").value(1));
+
+        verify(metaService).actualizar(eq(1L), any(Meta.class));
+    }
+
+    @Test
+    @DisplayName("PUT /metas/{id} - no existe → 404")
+    void actualizar_noExistente_retorna404() throws Exception {
+        when(metaService.actualizar(eq(99L), any(Meta.class)))
+                .thenThrow(new ResourceNotFoundException("Meta no encontrada con id: 99"));
+
+        mockMvc.perform(put("/metas/99")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(metaEjemplo)))
+                .andExpect(status().isNotFound());
+    }
+
+    @Test
+    @DisplayName("PUT /metas/{id} - nombre vacío → 400")
+    void actualizar_nombreVacio_retorna400() throws Exception {
+        Meta invalida = new Meta();
+        invalida.setNombre("");
+        invalida.setIdUsuario(1L);
+
+        mockMvc.perform(put("/metas/1")
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(invalida)))
                 .andExpect(status().isBadRequest());
 
-        verify(metaService, never()).guardar(any());
+        verify(metaService, never()).actualizar(any(), any());
     }
 }
